# replay-cli

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: README.md
examples/patches/: lamports.json  multi.json
examples/recipes/: 00-prereqs.sh  01-deploy-and-verify.sh  02-patch-and-verify.sh  03-batch-patch.sh  04-checkpoint-rewind.sh  05-inspect-idl.sh  06-tail-logs.sh  07-workbench-loop.sh
src/: client.rs  main.rs  output.rs  types.rs
src/cmd/: advance.rs  checkpoint.rs  clear.rs  deploy.rs  diff.rs  doctor.rs  fixtures.rs  idl.rs  kill.rs  logs.rs  mod.rs  patch.rs  plugin.rs  snapshots.rs  status.rs
